--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <title>My Portfolio </title>
     <link rel="stylesheet" href="css/styles.css" type="text/css" />
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" />
+    <link href='https://fonts.googleapis.com/css?family=Audiowide' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <meta name="description" content="#"/>
     <meta name="keywords" content="#"/>
 
@@ -15,7 +19,7 @@
 
     <body>
       <header>
-        <nav class="clearfix">
+        <nav class="clearfix navBg">
           <h1><strong>My</strong>Portfolio</h1>
           <ul>
             <li><a href="">HOME</a></li>
@@ -24,7 +28,7 @@
           </ul>
         </nav>
 
-        <div>
+        <div class="la">
           <h2>Max Ramos</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate, quos consequatur esse exercitationem rerum adipisci explicabo eaque. Cupiditate ex, vitae mollitia dicta velit, officiis quasi autem, cum aperiam alias minus.</p>
           <a href="#" class="button">Click Here</a>
@@ -36,7 +40,7 @@
   <div class="container">
   <div class="row">
     <div class="col-md-6">
-         <img src="images/max.jpg" alt="max" class="max">
+         <img src="img/max.jpg" alt="max" class="max">
     </div>
     <div class="col-md-6">
       <h1>About Me</h1>
@@ -49,19 +53,71 @@
     </div>
 </div>
 
+
 <section id="work">
   <div>
-    <h2>My Work</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas quod voluptas, voluptates tempore molestias id, neque veritatis reprehenderit, fuga soluta ut perspiciatis quos fugiat, eos debitis blanditiis quam harum necessitatibus.</p>
+    <h2 class="work">My Work</h2>
+    <p class="p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas quod voluptas, voluptates tempore molestias id, neque veritatis reprehenderit, fuga soluta ut perspiciatis quos fugiat, eos debitis blanditiis</p>
   </div>
-</section>
 
-  </main>
+  <div class="responsive">
+    <div class="img">
+      <a href="http://geekwiseb2.github.io/pet-store-maxmillon/" alt="pet">
+        <img src="img/pet.png" alt="Trolltunga Norway" width="300" height="200">
+      </a>
+      <div class="buttonCamel"><a href="http://geekwiseb2.github.io/pet-store-maxmillon/">To See My Work</a></div>
+    </div>
+  </div>
+
+  <div class="responsive">
+    <div class="img">
+      <a href="http://geekwiseb2.github.io/restaurante-maxmillon/" alt="res">
+        <img src="img/res.png" alt="resturant" width="300" height="200">
+      </a>
+      <div class="buttonCamel"><a href="http://geekwiseb2.github.io/restaurante-maxmillon/">To See My Work</a></div>
+    </div>
+  </div>
+
+  <div class="responsive">
+    <div class="img">
+      <a href="http://maxmillon.github.io/experiment/" alt="forest">
+        <img src="img/experiment.png" alt="Trolltunga Norway" width="300" height="200">
+      </a>
+    <div class="buttonCamel"><a href="http://maxmillon.github.io/experiment/">To See My Work</a></div>
+    </div>
+
+
+
+</section>
+</main>
+
+ <!-- <section id="boxes">
+    <ul>
+      <li>
+        <h2>1st Project Done</h2>
+        <img src="img/pet.png" alt="" class="pic">
+        <a href="#" class="box">Click Here</a>
+      </li>
+      <li>
+        <h2>2nd Project Done</h2>
+        <img src="img/res.png"  alt="" class="pic">
+        <a href="#" class="box">Click Here</a>
+      </li>
+      <li>
+        <h2>3rd Project Done</h2>
+        <img src="img/experiment.png" alt="" class="pic">
+        <a href="#" class="box">Click Here</a>
+      </li>
+    </ul>
+</section>  -->
 
 
 
       <footer>
-
+        <a href="#"><i class="fa fa-facebook"></i></a>
+        <a href="#"><i class="fa fa-twitter"></i></a>
+        <a href="#"><i class="fa fa-instagram"></i></a>
+          <p> &copy; Copyright to Max Ramos. All rights reserved.</p>
       </footer>
     </body>
 
